fix minor layout bugs

--- a/source/scss/_buttons.scss
+++ b/source/scss/_buttons.scss
@@ -40,6 +40,7 @@ a.button {
   }
 
   &.icon {
+    text-align: center;
     padding-left: 0.2em;
     padding-right: 0.2em;
     border-color: transparent;
